--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
         <main class="document"></main>
         <footer class="footer">
-            <p>© Copyright by me. All rights reserved</p>
+            <!-- <p>© Copyright by me. All rights reserved</p> -->
         </footer>
     </div>
 </body>
